fixed edit icon z-index

--- a/app/assets/stylesheets/board/board_overhead_bar.scss
+++ b/app/assets/stylesheets/board/board_overhead_bar.scss
@@ -17,6 +17,7 @@
   margin-top: 90px;
   padding: 0px 12px 10px 6px;
   border-bottom: 2px solid black;
+  z-index: 0;
 }
 
 .board-name-container {
